# ai-email-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.txt
config/: settings.py
docs/: architecture.md  user-guide.md
src/: agent.py  classifier.py  draft_generator.py  gmail_client.py  logging_config.py  pipeline.py  server.py  slack_client.py
tests/: test_agent.py  test_classifier.py  test_draft_generator.py  test_slack.py
