[project]
name = "project-ai-email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.2",
    "google-api-python-client==2.195.0",
    "google-auth-oauthlib==1.3.1",
    "openai==2.34.0",
    "protobuf==7.34.1",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "structlog==25.5.0",
    "tenacity==9.1.4",
]
